# EKA2L1-WEB

./: .gitignore  CMakeLists.txt  CMakeLists_wasm.cmake  LICENSE  build_android.sh  build_android_clone.sh  build_android_old.sh  build_hos.bat  build_hos.sh  build_hos_native.sh  build_release.sh  build_test.sh  claude.md  claude2.md  claude3.md  cursor.md  eka2l1.jks  kilo.md  log.txt  log1.txt  项目总结.md
src/emu/: CMakeLists.txt
src/emu/android/: .gitignore
src/emu/android/app/: build.gradle
src/emu/android/app/src/main/: AndroidManifest.xml
src/emu/android/app/src/main/cpp/include/android/: state.h
src/emu/android/app/src/main/cpp/src/: launcher.cpp  native-lib.cpp  state.cpp
src/emu/android/app/src/main/res/layout/: activity_emulator.xml
src/emu/android/app/src/main/res/values/: strings.xml
src/emu/android/app/src/main/res/values-zh-rCN/: strings.xml
src/emu/android/app/src/main/res/xml/: preferences_general.xml
src/emu/common/: CMakeLists.txt
src/emu/common/include/common/: buffer.h  crypt.h  dynamicfile.h  log.h  platform.h  queue.h  virtualmem.h
src/emu/common/src/: crypt.cpp  dynamicfile.cpp  fileutils.cpp  log.cpp  thread.cpp  types.cpp  upnp_null.cpp  virtualmem.cpp
src/emu/config/include/config/: config.h  options.inl
src/emu/config/src/: config.cpp
src/emu/cpu/: CMakeLists.txt
src/emu/cpu/include/cpu/: arm_interface.h
src/emu/cpu/include/cpu/12l1r/: tlb.h
src/emu/cpu/include/cpu/dyncom/: arm_dyncom.h  arm_dyncom_jit.h  arm_dyncom_trans.h  armstate.h
src/emu/cpu/src/: arm_factory.cpp
src/emu/cpu/src/dyncom/: arm_dyncom.cpp  arm_dyncom_interpreter.cpp  arm_dyncom_trans.cpp  arm_dyncom_wasmjit.cpp  armstate.cpp
src/emu/cpu/src/dyncom/tests/: dyncom_difftest.cpp
src/emu/dispatch/include/dispatch/libraries/: buffer_pusher.h
src/emu/dispatch/src/: audio.cpp  screen.cpp  video.cpp
src/emu/dispatch/src/libraries/: buffer_pusher.cpp
src/emu/dispatch/src/libraries/gles_shared/: gles_shared.cpp
src/emu/drivers/: CMakeLists.txt
src/emu/drivers/include/drivers/audio/: audio.h  dsp.h
src/emu/drivers/include/drivers/audio/backend/minibae/machine/: types.h
src/emu/drivers/include/drivers/audio/backend/null/: audio_null.h
src/emu/drivers/include/drivers/graphics/: buffer.h  graphics.h
src/emu/drivers/include/drivers/graphics/backend/ogl/: buffer_ogl.h  graphics_ogl.h
src/emu/drivers/src/: itc.cpp
src/emu/drivers/src/audio/: audio.cpp  dsp.cpp  player.cpp
src/emu/drivers/src/audio/backend/: dsp_shared.cpp
src/emu/drivers/src/audio/backend/null/: audio_null.cpp
src/emu/drivers/src/graphics/: context.cpp
src/emu/drivers/src/graphics/backend/: context_egl_ohos.cpp  context_egl_ohos.h  context_emscripten.cpp  graphics_driver_shared.cpp
src/emu/drivers/src/graphics/backend/ogl/: buffer_ogl.cpp  fb_ogl.cpp  graphics_ogl.cpp  shader_ogl.cpp
src/emu/drivers/src/hwrm/: vibration.cpp
src/emu/drivers/src/video/: video.cpp
src/emu/hos/: build-profile.json5
src/emu/hos/AppScope/: app.json5
src/emu/hos/AppScope/resources/base/element/: string.json
src/emu/hos/entry/: .gitignore  build-profile.json5
src/emu/hos/entry/src/main/cpp/: CMakeLists.txt  napi_helpers.h  napi_init.cpp  xcomponent_bridge.cpp  xcomponent_bridge.h
src/emu/hos/entry/src/main/cpp/types/libentry/: Index.d.ts
src/emu/hos/entry/src/main/ets/model/: AppItem.ets  DeviceItem.ets
src/emu/hos/entry/src/main/ets/pages/: Index.ets  RunPage.ets  SettingsPage.ets
src/emu/hos/entry/src/main/ets/service/: Emulator.ets
src/emu/hos/native/: CMakeLists.txt
src/emu/hos/native/include/hos/: emu_window_ohos.h  input_dialog.h  launcher.h  state.h  thread.h  ui_bridge.h
src/emu/hos/native/src/: emu_window_ohos.cpp  input_dialog.cpp  launcher.cpp  platform_stubs.cpp  state.cpp  thread.cpp  ui_bridge.cpp
src/emu/kernel/include/kernel/: kernel.h  thread.h
src/emu/kernel/src/: kernel.cpp  libmanager.cpp  process.cpp  property.cpp  scheduler.cpp  svc.cpp  thread.cpp
src/emu/ldd/include/ldd/videodriver/: videodriver.h
src/emu/ldd/src/: collection.cpp
src/emu/ldd/src/videodriver/: videodriver.cpp
src/emu/mem/include/mem/model/flexible/: memobj.h
src/emu/mem/src/model/flexible/: memobj.cpp
src/emu/mem/src/model/multiple/: chunk.cpp
src/emu/package/src/: sis_script_interpreter.cpp
src/emu/services/: CMakeLists.txt
src/emu/services/include/services/: context.h
src/emu/services/include/services/fbs/: fbs.h  font_atlas.h  font_store.h
src/emu/services/include/services/fbs/adapter/: freetype_font_adapter.h
src/emu/services/include/services/window/: keys.h  scheduler.h
src/emu/services/src/applist/: applist.cpp
src/emu/services/src/audio/keysound/: keysound.cpp
src/emu/services/src/bluetooth/: btmidman_null.cpp
src/emu/services/src/bluetooth/protocols/: overall_null.cpp
src/emu/services/src/centralrepo/: centralrepo.cpp  repo.cpp
src/emu/services/src/fbs/: font_atlas.cpp
src/emu/services/src/fbs/adapter/: freetype_font_adapter.cpp
src/emu/services/src/fbs/impls/: font.cpp  font_store.cpp
src/emu/services/src/featmgr/: featmgr.cpp
src/emu/services/src/fs/: dirs.cpp  fs.cpp
src/emu/services/src/internet/protocols/: overall_null.cpp
src/emu/services/src/ui/cap/: oom_app.cpp  sgc.cpp
src/emu/services/src/window/: scheduler.cpp  screen.cpp
src/emu/services/src/window/classes/: gstore.cpp  winuser.cpp
src/emu/system/include/system/installation/: rpkg.h
src/emu/system/src/: devices.cpp  epoc.cpp  hal.cpp
src/emu/system/src/installation/: rpkg.cpp
src/emu/utils/include/utils/: uchar.h
src/emu/utils/src/: uchar.cpp
src/emu/vfs/src/: vfs.cpp
src/emu/web/: CMakeLists.txt  CMakeLists_low.txt  CMakeLists_normal.txt  dev-cert.crt  gen_integrity.py  serve.py  shell.html  stamp_pages.cmake
src/emu/web/assets/fonts/: NOTICE.txt
src/emu/web/include/: protection.h
src/emu/web/pages/: index.html  manifest.json  run.html  sw.js
src/emu/web/pages/css/: app.css
src/emu/web/pages/js/: boot.js  index.js  integrity.js  run.js
src/emu/web/src/: main.cpp  platform_stubs.cpp  protection.cpp  web_audio.cpp  web_audio.h
(+20 files in other folders)
